--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "license": "MIT",
   "scripts": {
     "build": "cross-env GATSBY_EXPERIMENTAL_PAGE_BUILD_ON_DATA_CHANGES=true gatsby build --log-pages",
-    "develop": "gatsby develop",
+    "dev": "gatsby develop",
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean"
@@ -20,6 +20,7 @@
     "@mdx-js/react": "^1.6.22",
     "cross-env": "^7.0.3",
     "gatsby": "^3.3.0",
+    "gatsby-plugin-dark-mode": "^1.1.2",
     "gatsby-plugin-feed": "^3.3.0",
     "gatsby-plugin-google-analytics": "^3.3.0",
     "gatsby-plugin-manifest": "^3.3.0",
@@ -48,6 +49,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
+    "react-toggle": "^4.1.2",
     "react-typography": "^0.16.19",
     "remark-html-katex": "^3.0.0",
     "remark-math": "^3.0.0",
