--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "react-toggle": "^4.1.2",
     "react-typography": "^0.16.19",
     "remark-html-katex": "^3.0.0",
-    "remark-math": "^3.0.0",
+    "styled-components": "^5.3.0",
     "synthwave-vscode": "github:robb0wen/synthwave-vscode",
     "typography": "^0.16.19"
   },
