--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "gatsby-remark-copy-linked-files": "^4.0.0",
     "gatsby-remark-embed-youtube": "^0.0.7",
     "gatsby-remark-external-links": "^0.0.4",
+    "gatsby-remark-gifs": "^1.1.0",
     "gatsby-remark-images": "^5.0.0",
     "gatsby-remark-katex": "^3.10.0",
     "gatsby-remark-responsive-iframe": "^4.0.0",
