--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "gatsby-remark-embed-youtube": "^0.0.7",
     "gatsby-remark-external-links": "^0.0.4",
     "gatsby-remark-gifs": "^1.1.0",
+    "gatsby-remark-grid-tables": "^0.1.0",
     "gatsby-remark-images": "^5.0.0",
     "gatsby-remark-katex": "^3.10.0",
     "gatsby-remark-responsive-iframe": "^4.0.0",
