--- a/package.json
+++ b/package.json
@@ -39,9 +39,9 @@
     "gatsby-remark-embed-youtube": "^0.0.7",
     "gatsby-remark-external-links": "^0.0.4",
     "gatsby-remark-gifs": "^1.1.0",
-    "gatsby-remark-grid-tables": "^0.1.0",
     "gatsby-remark-images": "^5.0.0",
     "gatsby-remark-katex": "^3.10.0",
+    "gatsby-remark-mermaid": "^2.1.0",
     "gatsby-remark-responsive-iframe": "^4.0.0",
     "gatsby-remark-smartypants": "^4.0.0",
     "gatsby-remark-twitter-cards": "^0.6.1",
@@ -53,6 +53,7 @@
     "katex": "^0.15.2",
     "postcss": "^8.4.6",
     "prism-react-renderer": "^1.2.1",
+    "puppeteer": "^13.3.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
