--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-toggle": "^4.1.2",
+    "react-toggle-dark-mode": "^1.0.4",
     "react-typography": "^0.16.20",
     "remark-html-katex": "^3.0.0",
     "styled-components": "^5.3.3",
