--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gatsby-plugin-offline": "^4.3.0",
     "gatsby-plugin-react-helmet": "^4.3.0",
     "gatsby-plugin-robots-txt": "^1.5.5",
+    "gatsby-plugin-scroll-indicator": "^1.0.1",
     "gatsby-plugin-sharp": "^3.3.0",
     "gatsby-plugin-sitemap": "^3.3.0",
     "gatsby-plugin-typography": "^3.3.0",
