--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
+    "@vitejs/plugin-react-refresh": "^1.3.6",
     "cross-env": "^7.0.3",
     "gatsby": "^3.3.0",
     "gatsby-plugin-dark-mode": "^1.1.2",
@@ -56,7 +57,8 @@
     "react-typography": "^0.16.20",
     "remark-html-katex": "^3.0.0",
     "synthwave-vscode": "github:robb0wen/synthwave-vscode",
-    "typography": "^0.16.21"
+    "typography": "^0.16.21",
+    "vite": "^2.8.4"
   },
   "devDependencies": {
     "prettier": "^2.5.1"
